--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,12 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="BitcoinWidgets.Widget.MoscowTime" parent="TextAppearance.Material3.HeadlineMedium">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="BitcoinWidgets.Widget.FootNote" parent="TextAppearance.Material3.BodySmall">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
