--- a/app/src/main/res/layout/mempool_status_layout.xml
+++ b/app/src/main/res/layout/mempool_status_layout.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mempool_status_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical|end"
